foundation .row and columns work as central page container

--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,2 +1,4 @@
-%h1 This is the homepage.
-%a.button button to check for Foundation
+.row
+  .small-12.columns
+    %h1 This is the homepage.
+    %a.button button to check for Foundation
