--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,6 @@
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
+    = render :partial => 'layouts/common_header'
     = yield
     = javascript_include_tag "application"
