add pig image to header

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,12 @@ html
   body
   {
     background-image: url("purty_wood.png");
+
+    #piggybank
+    {
+      height: 100px;
+      width: 100px;
+    }
     .row
     {
       background-color: white;
