--- a/app/views/layouts/_common_header.haml
+++ b/app/views/layouts/_common_header.haml
@@ -1,3 +1,6 @@
 %header
   .row
-    %h3 hey this is a _common_header partial
+    .small-2.columns
+      = image_tag("piggy_bank.png", id: "piggybank")
+    .small-10.columns
+      %h1 BudgetSimple
