google font styled #website_name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,13 @@ html
       height: 100px;
       width: 100px;
     }
+
+    #website_name
+    {
+      font-family: Cabin Sketch, sans-serif;
+      margin-top: 28px;
+      margin-left: -52px;
+    }
     .row
     {
       background-color: white;
