--- a/app/views/layouts/_common_header.haml
+++ b/app/views/layouts/_common_header.haml
@@ -3,4 +3,4 @@
     .small-2.columns
       = image_tag("piggy_bank.png", id: "piggybank")
     .small-10.columns
-      %h1 BudgetSimple
+      %h1#website_name BudgetSimple
