--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     %title= content_for?(:title) ? yield(:title) : "foundation-rails"
 
     = stylesheet_link_tag "application"
+    = stylesheet_link_tag "http://fonts.googleapis.com/css?family=Cabin+Sketch"
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
