devise bundle install, generators, db:migrate

--- a/app/views/layouts/_common_header.haml
+++ b/app/views/layouts/_common_header.haml
@@ -4,3 +4,5 @@
       = image_tag("piggy_bank.png", id: "piggybank")
     .small-10.columns
       %h1#website_name BudgetSimple
+      %p.notice= notice
+      %p.alert= alert
