--- a/app/views/layouts/_common_header.haml
+++ b/app/views/layouts/_common_header.haml
@@ -6,3 +6,9 @@
       %h1#website_name BudgetSimple
       %p.notice= notice
       %p.alert= alert
+      - if user_signed_in?
+        %li= link_to current_user.email, edit_user_registration_path
+        %li= link_to "Log Out"
+      - else
+        %li= link_to "Sign Up", new_user_registration_path
+        %li= link_to "Log In", new_user_session_path
