changed style for .notice

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,14 @@ html
       color: white;
     }
 
+    .notice
+    {
+    position: relative;
+    left: 260px;
+    font-style: italic;
+    color: #3366FF;
+    }
+
     #piggybank
     {
       height: 100px;
