styled edit user form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,16 @@ html
       background-color: white;
     }
 
+    #cancel
+    {
+      float: right;
+    }
+
+    #unhappy
+    {
+      margin-top: 20px;
+    }
+
     #piggybank
     {
       height: 100px;
