--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,5 @@
 <div class="row">
   <div class="small-6 small-offset-3">
-<!--     <h2>Sign up</h2> -->
     <fieldset class="user_auth_form">
         <legend>Sign Up</legend>
         <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -20,4 +19,6 @@
       </fieldset>
 
     <%= render "devise/shared/links" %>
-  <div class="small-2">
+  </div>
+  <div class="small-2"></div>
+</div>
