--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,18 @@
-<h2>Forgot your password?</h2>
+<div class ="row">
+  <div class="small-6 small-offset-3">
+    <fieldset class="user_auth_form">
+      <legend>Forgot your password?</legend>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+        <div><%= f.label :email %><br />
+        <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
+        <div><%= f.submit "Send me reset password instructions", class: 'button tiny radius form_button1' %></div>
+      <% end %>
 
-<%= render "devise/shared/links" %>
+      <%= render "devise/shared/links" %>
+    </fieldset>
+  </div>
+</div>
