--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,4 +1,3 @@
 .row
   .small-12.columns
-    %h1 This is the homepage.
-    %a.button button to check for Foundation
+    %h1 Homepage--under construction.
