--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@ html
 {
   body
   {
-    background-image: image-url("purty_wood.png");
+    background-image: url("purty_wood.png");
 
     .authbuttons
     {
