--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -1,3 +1,18 @@
-<h1>Budgets#index</h1>
-<p>Find me in app/views/budgets/index.html.erb</p>
-<p><%= @budgets %></p>
+<div class="row">
+  <div class="small-2 columns"></div>
+  <div class="small-8 columns">
+    <h1>My Budgets</h1>
+    <table>
+      <tr>
+        <th>Budget Name</th>
+        <th>Last Modified</th>
+      </tr>
+    <% @budgets.each do |budget| %>
+      <tr>
+        <td><%= budget.name %></td>
+        <td><%= budget.updated_at %></td>
+      </tr>
+    <% end %>
+    </table>
+  </div>
+</div>
