starting to build html new form

--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -1,4 +1,13 @@
 <div class="row">
+  <div class="small-7 columns"></div>
+  <div class="small-3 columns">
+      <fieldset class="">
+          <legend>Add a Budget</legend>
+
+      </fieldset>
+  </div>
+</div>
+<div class="row">
   <div class="small-2 columns"></div>
   <div class="small-8 columns">
     <h1>My Budgets</h1>
