--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -6,7 +6,7 @@
           <%= form_for(@budget) do |f| %>
             <%= f.label :name %>
             <%= f.text_field :name %>
-            <%= f.submit "Submit", class: "button tiny radius form_button1" %>
+            <%= f.submit "Create Budget", class: "button tiny radius form_button1" %>
           <% end %>
       </fieldset>
   </div>
