made delete button red

--- a/app/views/budgets/index.html.erb
+++ b/app/views/budgets/index.html.erb
@@ -27,7 +27,8 @@
         <td><%= budget.updated_at %></td>
         <td>
           <%= button_to "Delete", { action: "delete", id: budget.id},
-                                              method: :delete, data: { confirm: "Are you sure?" } %>
+                                              method: :delete, data: { confirm: "Are you sure?" },
+                                              :class => 'button tiny radius alert' %>
         </td>
       </tr>
     <% end %>
