Added image and title to welcome page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,6 +53,13 @@ html
       width: 100px;
     }
 
+    #relaxed_guy
+    {
+      margin-bottom: 80px;
+      margin-top: 56px;
+      margin-left: 153px;
+    }
+
     #website_name
     {
       font-family: Cabin Sketch, sans-serif;
