--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,3 +1,5 @@
 .row
-  .small-12.columns
-    %h1 Homepage--under construction.
+  .small-10.small-offset-1.columns
+    %h1.subheader Because the last thing you need is more complexity.
+    = image_tag("relaxed-guy.jpeg", id: "relaxed_guy")
+.row
