--- a/app/views/budgets/edit.haml
+++ b/app/views/budgets/edit.haml
@@ -6,26 +6,21 @@
                                                 data: {confirm: "Are you sure? Unsaved changes will be lost."},
                                                 :class => 'button tiny radius'
 / .row
-/   .small-12.columns
-/     %p= "Budget Income: " + @budget.income_cents.to_s
-/ .row
-/   .small-12.columns
-/     - @categories.each do |category|
-/       %p= category.name + ":  " + category.amount_cents.to_s
-.row
-  .small-2.columns
-    = form_for :budget do |f|
-      = f.label :Income
-      = f.text_field :income_cents, data: { role: 'money'}
-  .small-10.columns
-/ .row
 /   .small-2.columns
-/     - @categories.each do |category|
-/       = form_for :category do |f|
-/         = f.label category.name
-/         = f.text_field :amount_cents, data: { role: 'money', a_sep: ',', a_dec: ','}
+/     = form_for @budget do |f|
+/       = f.label :Income, "my income"
+/       = f.text_field :income_cents, data: { role: 'money' }
+/       = @budget.categories.each do |category|
+/         = form_for category do |f|
+/           = f.label category.name
+/           = f.text_field :amount_cents, data: { role: 'money' }
+/       = f.submit
 .row
   .small-2.columns
-    = form_for :budget do |f|
-      = f.label :Income, "my income"
+    = form_for @budget do |f|
+      = f.label :income, "Income"
       = f.text_field :income_cents, data: { role: 'money' }
+      = f.fields_for :categories do |categories_form|
+        = categories_form.label :name
+        = categories_form.text_field :amount_cents, data: { role: 'money' }
+      = f.submit
